--- a/data/constructions/nom-premod-000.yaml
+++ b/data/constructions/nom-premod-000.yaml
@@ -1,4 +1,7 @@
 id: nom-premod-000
-pattern: "Nom[Mod:XP Head:N]"
-name: "Pre-head Modifier in Nominal"
-coreMeaning: "Modification of nominal head through pre-head constituent"
+name: Pre-head Modifier in Nominal
+pattern: Nom[Mod:XP Head:N]
+meanings:
+  '1':
+    definition: Modification of nominal head through pre-head constituent
+    examples: []
