--- a/data/constructions/NP-bare-role.yaml
+++ b/data/constructions/NP-bare-role.yaml
@@ -1,41 +1,48 @@
 id: bare-role-001
-name: "Bare Role Construction"
-pattern: "PredComp:NP[Head:Nom]"
+name: Bare Role Construction
+pattern: PredComp:NP[Head:Nom]
 meanings:
-  1:
-    definition: "Predicates institutional role"
-    details: "Predicates membership in formal institutional role category"
+  '1':
+    definition: Predicates institutional role
+    details: Predicates membership in formal institutional role category
     examples:
-      - form: "is president"
-        note: "Leadership role"
-      - form: "became chair"
-        note: "Organizational role"
-    relations: [1, 2]
-  2:
-    definition: "Predicates occupational role"
-    details: "Predicates membership in professional category" 
+      - form: is president
+        note: Leadership role
+      - form: became chair
+        note: Organizational role
+    relations:
+      - 1
+      - 2
+  '2':
+    definition: Predicates occupational role
+    details: Predicates membership in professional category
     examples:
-      - form: "is doctor"
-        note: "Professional role"
-      - form: "became teacher"
-        note: "Educational role"
-    relations: [1, 3]
-  3:
-    definition: "Predicates kinship role"
-    details: "Predicates familial relationship role"
+      - form: is doctor
+        note: Professional role
+      - form: became teacher
+        note: Educational role
+    relations:
+      - 1
+      - 3
+  '3':
+    definition: Predicates kinship role
+    details: Predicates familial relationship role
     examples:
-      - form: "is mother to them"
-        note: "Parental role"
-      - form: "became godfather"
-        note: "Ritual kinship role"
-    relations: [2, 3]
+      - form: is mother to them
+        note: Parental role
+      - form: became godfather
+        note: Ritual kinship role
+    relations:
+      - 2
+      - 3
 relations:
-  1:
-    construction: "NP-bare-001.3"
-    type: "implements"
-  2:
-    construction: "role-001"
-    type: "specifies"  
-  3:
-    construction: "category-001"
-    type: "implements"
+  '1':
+    construction: np-bare-001.3
+    type: implements
+  '2':
+    construction: role-001
+    type: specialization-of
+    notes: 'Original type: specifies.'
+  '3':
+    construction: category-001
+    type: implements
