--- a/data/constructions/n-proper-001.yaml
+++ b/data/constructions/n-proper-001.yaml
@@ -1,53 +1,65 @@
 id: n-proper-001
-name: "Proper Noun"
-pattern: "Capitalized noun root [A-Z][a-z]+"
+name: Proper Noun
+pattern: Capitalized noun root [A-Z][a-z]+
 meanings:
- 1:
-   definition: "Denotes individual-specific feature bundle"
-   details: "Core semantic features characterizing a particular individual"
-   examples:
-     - form: "Einstein-"
-       note: "Features of Einstein-ness"
-     - form: "Shakespeare-"
-       note: "Features of Shakespeare-ness"
-   relations: [1, 2]
- 2:
-   definition: "Denotes archetypal feature bundle"
-   details: "Characteristic semantic features that can ground metaphorical extension"
-   examples:
-     - form: "Waterloo-"
-       note: "Defeat-related features"
-     - form: "Marathon-"
-       note: "Endurance-related features"
-   relations: [1, 3]
- 3:
-   definition: "Denotes institutional feature bundle"
-   details: "Semantic features associated with institutional entities"
-   examples:
-     - form: "Harvard-"
-       note: "University-related features"
-     - form: "Congress-"
-       note: "Legislative-related features"
-   relations: [2, 4]
- 4:
-   definition: "Denotes geographical feature bundle"
-   details: "Semantic features associated with locations"
-   examples:
-     - form: "Pacific-"
-       note: "Ocean-related features"
-     - form: "Everest-"
-       note: "Mountain-related features"
-   relations: [3, 4]
+  '1':
+    definition: Denotes individual-specific feature bundle
+    details: Core semantic features characterizing a particular individual
+    examples:
+      - form: Einstein-
+        note: Features of Einstein-ness
+      - form: Shakespeare-
+        note: Features of Shakespeare-ness
+    relations:
+      - 1
+      - 2
+  '2':
+    definition: Denotes archetypal feature bundle
+    details: Characteristic semantic features that can ground metaphorical extension
+    examples:
+      - form: Waterloo-
+        note: Defeat-related features
+      - form: Marathon-
+        note: Endurance-related features
+    relations:
+      - 1
+      - 3
+  '3':
+    definition: Denotes institutional feature bundle
+    details: Semantic features associated with institutional entities
+    examples:
+      - form: Harvard-
+        note: University-related features
+      - form: Congress-
+        note: Legislative-related features
+    relations:
+      - 2
+      - 4
+  '4':
+    definition: Denotes geographical feature bundle
+    details: Semantic features associated with locations
+    examples:
+      - form: Pacific-
+        note: Ocean-related features
+      - form: Everest-
+        note: Mountain-related features
+    relations:
+      - 3
+      - 4
 relations:
- 1:
-   construction: "nom-proper-001"
-   type: "projects-to"
- 2:
-   construction: "metaphor-source-001"
-   type: "enables"
- 3:
-   construction: "institution-type-001"
-   type: "enables"
- 4:
-   construction: "location-type-001"
-   type: "enables"
+  '1':
+    construction: nom-proper-001
+    type: related-to
+    notes: 'Original type: projects-to.'
+  '2':
+    construction: metaphor-source-001
+    type: related-to
+    notes: 'Original type: enables.'
+  '3':
+    construction: institution-type-001
+    type: related-to
+    notes: 'Original type: enables.'
+  '4':
+    construction: location-type-001
+    type: related-to
+    notes: 'Original type: enables.'
