--- a/data/constructions/np-001.yaml
+++ b/data/constructions/np-001.yaml
@@ -1,24 +1,25 @@
 id: np-001
-pattern: "NP"
-name: "Noun Phrase"
+name: Noun Phrase
+pattern: NP
 meanings:
-  - meaning: "Can refer to entities, concepts, or be purely grammatical"
+  '1':
+    definition: Can refer to entities, concepts, or be purely grammatical
+    details: This is the most general NP construction, serving as a parent for all other NP types.
     examples:
-      - form: "John"
-        notes: "Proper noun"
-      - form: "the book"
-        notes: "Common noun with determiner"
-      - form: "he"
-        notes: "Pronoun"
-    notes: "This is the most general NP construction, serving as a parent for all other NP types."
+      - form: John
+        note: Proper noun
+      - form: the book
+        note: Common noun with determiner
+      - form: he
+        note: Pronoun
 constraints:
-  - type: "syntactic"
-    description: "Must be a valid NP constituent"
-semanticType: "varied"
+  - type: syntactic
+    description: Must be a valid NP constituent
+semanticType: reference
 relatedConstructions:
-  - id: "np-common-001"
-    relationship: "specialization-of"
-  - id: "np-proper-name-001"
-    relationship: "specialization-of"
-  - id: "np-pron-001"
-    relationship: "specialization-of"
+  - id: np-common-001
+    relationship: specialization-of
+  - id: np-proper-name-001
+    relationship: specialization-of
+  - id: np-pron-001
+    relationship: specialization-of
