--- a/data/constructions/np-def-001.yaml
+++ b/data/constructions/np-def-001.yaml
@@ -1,65 +1,83 @@
-id: NP-definite-001
-name: "Definite NP Construction" 
-pattern: "Definite determiner + Nominal | Personal pronoun | Universal quantifier + Nominal | Proper name"
+id: np-def-001
+name: Definite NP Construction
+pattern: Definite determiner + Nominal | Personal pronoun | Universal quantifier + Nominal | Proper name
 meanings:
- 1:
-   definition: "Refers to/predicates identifiable instance"
-   details: "Refers to or predicates property of instance of nominal's type as uniquely identifiable in context"
-   examples:
-     - form: "The dog barked"
-       note: "Refers to specific dog"
-     - form: "She is the winner"
-       note: "Predicates unique role"
-   relations: [1, 2, 4]
- 2:
-   definition: "Refers to/predicates maximal set"
-   details: "Refers to or predicates property of all contextually relevant instances of nominal's type"
-   examples:
-     - form: "All students passed"
-       note: "Refers to complete set"
-     - form: "They are the top performers"
-       note: "Predicates maximal group property"
-   relations: [1, 2, 3]
- 3:
-   definition: "Refers to/predicates unique role"
-   details: "Refers to or predicates property of unique occupant/instance of role described by nominal"
-   examples:
-     - form: "The CEO resigned"
-       note: "Refers to role-holder"
-     - form: "That became the main issue"
-       note: "Predicates unique status"
-   relations: [1, 2, 4]
- 4:
-   definition: "Refers to/predicates kind"
-   details: "Refers to or predicates property of entire species/type"
-   examples:
-     - form: "The dodo is extinct"
-       note: "Refers to species"
-     - form: "That animal is the lion"
-       note: "Predicates species membership"
-   relations: [1, 3, 4, 5]
- 5:
-   definition: "Refers to/predicates generic property"
-   details: "Refers to or predicates property taken as generally characteristic"
-   examples:
-     - form: "The lion is dangerous"
-       note: "Refers to typical properties"
-     - form: "He became the typical bureaucrat"
-       note: "Predicates typical properties"
-   relations: [1, 4, 5]
+  '1':
+    definition: Refers to/predicates identifiable instance
+    details: Refers to or predicates property of instance of nominal's type as uniquely identifiable in context
+    examples:
+      - form: The dog barked
+        note: Refers to specific dog
+      - form: She is the winner
+        note: Predicates unique role
+    relations:
+      - 1
+      - 2
+      - 4
+  '2':
+    definition: Refers to/predicates maximal set
+    details: Refers to or predicates property of all contextually relevant instances of nominal's type
+    examples:
+      - form: All students passed
+        note: Refers to complete set
+      - form: They are the top performers
+        note: Predicates maximal group property
+    relations:
+      - 1
+      - 2
+      - 3
+  '3':
+    definition: Refers to/predicates unique role
+    details: Refers to or predicates property of unique occupant/instance of role described by nominal
+    examples:
+      - form: The CEO resigned
+        note: Refers to role-holder
+      - form: That became the main issue
+        note: Predicates unique status
+    relations:
+      - 1
+      - 2
+      - 4
+  '4':
+    definition: Refers to/predicates kind
+    details: Refers to or predicates property of entire species/type
+    examples:
+      - form: The dodo is extinct
+        note: Refers to species
+      - form: That animal is the lion
+        note: Predicates species membership
+    relations:
+      - 1
+      - 3
+      - 4
+      - 5
+  '5':
+    definition: Refers to/predicates generic property
+    details: Refers to or predicates property taken as generally characteristic
+    examples:
+      - form: The lion is dangerous
+        note: Refers to typical properties
+      - form: He became the typical bureaucrat
+        note: Predicates typical properties
+    relations:
+      - 1
+      - 4
+      - 5
 relations:
- 1:
-   construction: "grammatical-definiteness-001.1"
-   type: "implements"
- 2:
-   construction: "definite-001.1"
-   type: "elaborates"
- 3:
-   construction: "quantifier-001"
-   type: "implements"
- 4:
-   construction: "predication-001"
-   type: "enables"
- 5:
-   construction: "kind-001"
-   type: "implements"
+  '1':
+    construction: grammatical-definiteness-001.1
+    type: implements
+  '2':
+    construction: definite-001.1
+    type: related-to
+    notes: 'Original type: elaborates.'
+  '3':
+    construction: quantifier-001
+    type: implements
+  '4':
+    construction: predication-001
+    type: related-to
+    notes: 'Original type: enables.'
+  '5':
+    construction: kind-001
+    type: implements
