--- a/data/constructions/plural-001.yaml
+++ b/data/constructions/plural-001.yaml
@@ -1,38 +1,45 @@
 id: plural-001
-name: "Plural Construction"
-pattern: "Applies to nouns, pronouns, determinsyobrds, and proper names"
+name: Plural Construction
+pattern: Applies to nouns, pronouns, determinsyobrds, and proper names
 meanings:
-  1:
-    implements: "grammatical-number-001.1"
-    specialization: "Specifies non-singular quantities"
+  '1':
+    implements: grammatical-number-001.1
+    specialization: Specifies non-singular quantities
     examples:
-      - form: "cats"
-        note: "Non-singular entities"
-      - form: "they"
-        note: "Non-singular entities"
-      - form: "these"
-        note: "Non-singular entities"
-    relations: [1, 2]
-  2:
-    implements: "grammatical-number-001.2"
-    specialization: "Marks countable aggregates/collections"
+      - form: cats
+        note: Non-singular entities
+      - form: they
+        note: Non-singular entities
+      - form: these
+        note: Non-singular entities
+    relations:
+      - 1
+      - 2
+  '2':
+    implements: grammatical-number-001.2
+    specialization: Marks countable aggregates/collections
     examples:
-      - form: "Kennedys"
-        note: "Group entity"
-      - form: "many"
-        note: "Group entity"
-    relations: [1, 3]
-  3:
-    implements: "grammatical-number-001.2"
-    specialization: "Marks countable taxonomic categories"
+      - form: Kennedys
+        note: Group entity
+      - form: many
+        note: Group entity
+    relations:
+      - 1
+      - 3
+  '3':
+    implements: grammatical-number-001.2
+    specialization: Marks countable taxonomic categories
     examples:
-      - form: "wines"
-        note: "Types rather than mass"
-    relations: [1, 2]
-  4:
-    implements: "grammatical-number-001.1"
-    specialization: "Marks recurring instances"
+      - form: wines
+        note: Types rather than mass
+    relations:
+      - 1
+      - 2
+  '4':
+    implements: grammatical-number-001.1
+    specialization: Marks recurring instances
     examples:
-      - form: "headaches"
-        note: "Recurring instances"
-    relations: [1]
+      - form: headaches
+        note: Recurring instances
+    relations:
+      - 1
