--- a/data/constructions/proper-name.yaml
+++ b/data/constructions/proper-name.yaml
@@ -1,21 +1,22 @@
 id: np-proper-name-001
-pattern: ""
-name: "Proper Name Phrase"
+name: Proper Name Phrase
+pattern: ''
 meanings:
-  - meaning: "Refers to a unique individual, entity, place, event, etc."
+  '1':
+    definition: Refers to a unique individual, entity, place, event, etc.
     examples:
-      - form: "John"
-        notes: "Refers to a specific person named John"
-      - form: "London"
-        notes: "Refers to the city of London"
-      - form: "the United Nations"
-        notes: "Refers to the international organization"
+      - form: John
+        note: Refers to a specific person named John
+      - form: London
+        note: Refers to the city of London
+      - form: the United Nations
+        note: Refers to the international organization
 constraints:
-  - type: "syntactic"
-    description: "Must contain a proper name"
-semanticType: "reference"
+  - type: syntactic
+    description: Must contain a proper name
+semanticType: reference
 relatedConstructions:
-  - id: "np-001"
-    relationship: "inherits-from"
-  - id: "np-proper-noun-001"
-    relationship: "specialization-of"
+  - id: np-001
+    relationship: inherits-from
+  - id: np-proper-noun-001
+    relationship: specialization-of
